# rrc2022

./: .gitignore  README.md  setup.cfg  trifinger.toml
rrc2022/: example.py
rrc2022/policies/: __init__.py  lift.pt  push.pt
scripts/: _validate_policy.py  automated_submission.sh  evaluate_pre_stage.py  validate.py
