[metadata]
name = rrc2022
version = attr: rrc2022.__version__
description = Example package for the Real Robot Challenge 2022
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause


[options]
packages = find:
install_requires =
    numpy
    gym
    torch
    # rrc_2022_datasets @ git+https://github.com/rr-learning/rrc_2022_datasets.git@v1.0.0

[options.package_data]
rrc2022.policies = *.pt
